Fix: z-index once again

--- a/assets/style/_title.scss
+++ b/assets/style/_title.scss
@@ -10,6 +10,7 @@
   left: 0;
 
   background-color: black;
+  z-index: 1;
 
   align-items: baseline;
 
